# folds

./: .gitignore  Cargo.toml  readme.md
benches/: my_benchmark.rs
examples/: main.rs  simple.rs  taxi.rs
src/: common.rs  fold.rs  lib.rs  main.rs  stats.rs
