[package]
name = "folds"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "folds"
path = "src/lib.rs"
doc = true
crate-type = ["lib"]

[dependencies]
rayon = "1.8.0"
rustc-hash = "1.1.0"

[dev-dependencies]
criterion = {version = "0.4", features = ["html_reports"]}
serde = { version = "*", features = ["derive"] }
serde_json = "*"
chrono = {version ="*", features = ["serde"]}

[[bench]]
name = "my_benchmark"
harness = false
