[package]
name = "folds"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
debug = true

[lib]
name = "folds"
path = "src/lib.rs"
doc = true
crate-type = ["lib"]

[dependencies]
rand = {version = "0.8.5", features = ["small_rng"]} 
rayon = "1.8.0"
rustc-hash = "1.1.0"

[dev-dependencies]
criterion = {version = "0.4", features = ["html_reports"]}
arrow = {version = "*"}
parquet = {version = "*", features = ["async"]}
tokio = { version = "1", features = ["full"] }
futures = "*"

[[bench]]
name = "my_benchmark"
harness = false
